[metadata]
name = eyeditor
version = 0.0.1

description = EYE - A Qt-based scriptable text editor
long_description = file: README.rst
keywords = code, development, editor, qt, script, ide
url = https://github.com/hydrargyrum/eye

license = WTFPLv2
author = Hg
author_email = dev@indigo.re

classifier =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Public Domain
    Topic :: Text Editors
    Topic :: Text Editors :: Integrated Development Environments (IDE)
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6


[options]
zip_safe = 0
install_requires =
    six
    PyQt5
    QScintilla
    pyxdg
packages = find:

[options.entry_points]
console_scripts =
    eye=eye.app:main

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1
