[metadata]
name = eyeditor
version = attr: eye.__version__

description = EYE - A Qt-based scriptable text editor
long_description = file: README.rst
keywords = code, development, editor, qt, script, ide
url = https://github.com/hydrargyrum/eye

license = WTFPLv2
author = Hg
author_email = dev@indigo.re

classifier =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Public Domain
    Topic :: Text Editors
    Topic :: Text Editors :: Integrated Development Environments (IDE)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6


[options]
zip_safe = 0
python_requires = >=3.3
install_requires =
    PyQt5
    QScintilla
    pyxdg
packages = find:

[options.entry_points]
console_scripts =
    eye=eye.app:main

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1
